add video output

--- a/ml/notebooks/01-identifying_players.ipynb
+++ b/ml/notebooks/01-identifying_players.ipynb
@@ -140,10 +140,38 @@
     "    video.write(frgb)\n",
     "video.release()\n",
     "\n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "#compress\n",
     "import os\n",
-    "os.system(\"ffmpeg -i ../data/processed/output2.mp4 -vcodec libx264 -crf 28 ../data/processed/output2_compressed.mp4\")\n",
-    " "
+    "os.system(\"ffmpeg -y -i ../data/processed/output2.mp4 -filter:v scale=900:-1 -vcodec libx264 -crf 15 ../data/processed/output2_compressed.mp4\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<video controls src=\"../data/processed/output2_compressed.mp4\">animation</video>\n"
    ]
   }
  ],
